# build-your-own-x

./: .gitignore  README.md
01-allocator/: Makefile
01-allocator/docs/: design.md
01-allocator/src/: malloc.c  malloc.h
01-allocator/tests/: debug.c  debug2.c  test_invariant.c  test_stage1.c
02-database/: .gitignore  Makefile
02-database/docs/: learnings.md
02-database/src/: btree.c  btree.h  btree_internal.h  cursor.c  cursor.h  pager.c  pager.h
02-database/tests/: Makefile  test_btree  test_btree.c
02-explicit-list/: Makefile
02-explicit-list/src/: malloc.c  malloc.h
02-explicit-list/tests/: test_stage2.c
03-segregated-fit/: Makefile
03-segregated-fit/src/: malloc.c  malloc.h
03-segregated-fit/tests/: test_stage3.c
03-shell/: .gitignore  Makefile  mira
04-browser/: Cargo.toml
04-browser/src/: lib.rs  main.rs
04-browser/src/dom/: access.rs  mod.rs  mutation.rs  selectors.rs
04-browser/src/html/: access.rs  dom.rs  mod.rs  tokenizer.rs  tree_builder.rs
04-browser/src/net/: cookies.rs  http.rs  loader.rs  mod.rs  tls.rs  url.rs
04-browser/tests/: integration_test.rs  stage02_test.rs  stage03_test.rs
04-browser/tests/fixtures/: 01_simple.html  02_broken.html  03_deeply_nested.html  04_script_style.html  05_forms.html  06_headings.html  07_links_media.html  08_implicit_closing.html  09_self_closing.html  10_comments_doctype.html  12_real_snippet.html  13_attributes.html
04-slab-allocator/: Makefile
05-production/: Makefile
docs/: browser-design.md  lantern-runtime-design.md  memory-engine-design.md  stage4-design.md
(+18 files in other folders)
